fixed overflow nav bug

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -726,9 +726,6 @@ h6
 
 .navbar-nav .dropdown.open > a[data-toggle=dropdown] + .dropdown-menu
 	display: block !important
-
-.nav-container
-	overflow: hidden
 .navbar
 	margin-bottom: 0px
 	background-color: transparent
